fix support text align flex

--- a/src/app/components/flex-grid-data-control/control-grid-data-layout-panel/control-grid-data-layout-panel.component.scss
+++ b/src/app/components/flex-grid-data-control/control-grid-data-layout-panel/control-grid-data-layout-panel.component.scss
@@ -36,13 +36,6 @@
   background: #b3ffae;
 }
 
-// ::ng-deep.wj-cell[role*="gridcell"]:not(.wj-group).even {
-//   background-color: #ffddd2 !important;
-// }
-// ::ng-deep.wj-cell[role*="gridcell"]:not(.wj-group).odd {
-//   background-color: #82cd47 !important;
-// }
-
 ::ng-deep.wj-flexgrid .cell-changed {
   background-color: #e0144c;
 }
@@ -65,26 +58,38 @@
   transition: all 0.2s;
 }
 
-::ng-deep .wj-cell.wj-alt:not([class*="odd"]),
-::ng-deep .wj-cell.wj-alt:not([class*="even"]) {
-  background-color: #b7c4cf;
-}
 ::ng-deep .wj-flexgrid .wj-cell.cell-img {
   padding: 0;
   text-align: center;
   width: 100px;
   height: 100px;
 }
-// ::ng-deep.wj-flexgrid .wj-cell.cell-img:hover {
-//   z-index: 1;
-//   overflow: visible;
-// }
-// ::ng-deep .wj-flexgrid .wj-cell.cell-img:hover img {
-//   transform: scale(3);
-//   transition: all 600ms;
-// }
+::ng-deep .wj-cell.wj-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+::ng-deep div[aria-level="1"] .wj-cell.wj-group {
+  background-color: #fff6bd;
+  font-weight: 600;
+}
+::ng-deep div[aria-level="2"] .wj-cell.wj-group {
+  background-color: #fbc252;
+  font-weight: 600;
+}
+
+//#Right
 ::ng-deep .wj-flexgrid .wj-header {
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
+}
+::ng-deep .wj-cell {
+  display: flex;
+  justify-content: center;
   align-items: center;
+}
+
+::ng-deep .wj-cell.wj-alt {
+  background-color: #b7c4cf;
 }
